updated styles and fixed alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,6 @@ body {
   background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("/img/weather_background.png") no-repeat;
   background-size: cover;
   background-position: center center;
-  text-align: center;
 }
 .weather-card .top .wrapper {
   padding: 30px;
@@ -49,14 +48,14 @@ body {
 .week-card{
     display: inline-flex;
     flex-flow: row;
-    box-shadow: 0 1px 38px rgba(0, 0, 0, 0.15), 0 5px 12px rgba(0, 0, 0, 0.25);
+    height: 150px;
     width: 20%;
     padding: 20px 10px;
-    height: 100px;
     margin: auto;
     background-color: #fff;
-    height: 100px;
     transition: .3s linear all;
+    text-align: center;
+    border:1px solid #dadada;
   }
 
   .week-card:hover{
